syntax = "proto3";

package user;

option go_package = ".;user";

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  int32 id = 1;
  string user_name = 2;
  string email = 3;
  string avatar = 4;
  int64 created_time = 5;
  int64 updated_time = 6;
  int32 state = 7;
}

message LoginRequest {
  string acc = 1;
  string password = 2;
}

message LoginResponse {
  int32 id = 1;
  string user_name = 2;
  string email = 3;
  string avatar = 4;
  int64 created_time = 5;
  int64 updated_time = 6;
  int32 state = 7;
}

// 服务
service UserService {
  // 根据用户编号查询用户信息
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  // 用户登录
  rpc Login(LoginRequest) returns (LoginResponse);
}